--- a/config.json
+++ b/config.json
@@ -43,20 +43,11 @@
         ],
         "decryption": "none"
       },
-      "streamSettings": {
-        "network": "h2",
-        "security": "reality",
-        "realitySettings": {
-          "show": false,
-          "dest": "",
-          "xver": 0,
-          "maxTimeDiff": 0,
-          "minClientVer": "1.8.0",
-          "serverNames": [],
-          "privateKey": "",
-          "shortIds": []
-        }
-      },
+  "streamSettings": {
+    "network": "tcp",
+    "tcpSettings": { },
+    "security": "none"
+  },
       "sniffing": {
         "enabled": true,
         "destOverride": ["http", "tls"]
