--- a/config.json
+++ b/config.json
@@ -36,8 +36,8 @@
       "settings": {
         "clients": [
           {
-            "email": "",
-            "id": "",
+            "email": "dsds",
+            "id": "fc84ffe3-71be-47f0-9dfd-9bbc99d54d58",
             "flow": ""
           }
         ],
